syntax = "proto3";

package clouddisk;

message SignUpRequest {
    string username = 1;
    string password = 2;
}

message SignUpResponse {
    string status = 1;
    string msg = 2;
    string token = 3;
}

service UserService {
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
    rpc SignIn(SignUpRequest) returns (SignUpResponse);
}

